// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`screen: Proposals/List matches snapshot 1`] = `
<div
  className="css-1twmwxn-root"
  id="Box"
>
  <div
    className="css-14mpgd5-topContent"
  >
    <div
      className="css-1xbqq1r-total"
      id="Total"
      total="2"
    />
  </div>
  <div
    className="css-l0czsq-list"
  >
    <div
      className="List"
      onScroll={[Function]}
      style={
        {
          "WebkitOverflowScrolling": "touch",
          "direction": "ltr",
          "height": 600,
          "overflow": "auto",
          "position": "relative",
          "width": 600,
          "willChange": "transform",
        }
      }
    >
      <div
        style={
          {
            "height": 200,
            "pointerEvents": undefined,
            "width": "100%",
          }
        }
      >
        <div
          style={
            {
              "height": 100,
              "left": 0,
              "position": "absolute",
              "right": undefined,
              "top": 0,
              "width": "100%",
            }
          }
        >
          <div>
            <div
              className="css-8bkbz1-root"
            >
              <div
                className="css-wxblv8-header"
              >
                <h4
                  className="MuiTypography-root MuiTypography-h4 css-138pxwk-MuiTypography-root-id"
                >
                  #3
                </h4>
                <span
                  className="css-y4sl71-mobile"
                >
                  <div
                    className="css-1uw8c3v-root-four"
                  >
                    <p
                      className="MuiTypography-root MuiTypography-body1 css-pfovru-MuiTypography-root"
                    >
                      passed
                    </p>
                  </div>
                </span>
              </div>
              <div>
                <div
                  className="css-11049aw-title"
                >
                  <a
                    href="/proposals/3"
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                    onTouchStart={[Function]}
                  >
                    <a
                      className="MuiTypography-root MuiTypography-h3 value css-1kl9mnf-MuiTypography-root"
                    >
                      Staking Param Change Part Three
                    </a>
                  </a>
                </div>
                <p
                  className="MuiTypography-root MuiTypography-body2 css-1bzqam7-MuiTypography-root-content"
                >
                  Update max validators
                </p>
              </div>
              <span
                className="css-1d2xof0-desktop"
              >
                <div
                  className="css-1uw8c3v-root-four"
                >
                  <p
                    className="MuiTypography-root MuiTypography-body1 css-pfovru-MuiTypography-root"
                  >
                    passed
                  </p>
                </div>
              </span>
            </div>
            <hr
              className="MuiDivider-root MuiDivider-fullWidth css-l3fh2f-MuiDivider-root"
            />
          </div>
        </div>
        <div
          style={
            {
              "height": 100,
              "left": 0,
              "position": "absolute",
              "right": undefined,
              "top": 100,
              "width": "100%",
            }
          }
        >
          <div>
            <div
              className="css-8bkbz1-root"
            >
              <div
                className="css-wxblv8-header"
              >
                <h4
                  className="MuiTypography-root MuiTypography-h4 css-138pxwk-MuiTypography-root-id"
                >
                  #7
                </h4>
                <span
                  className="css-y4sl71-mobile"
                >
                  <div
                    className="css-117ggys-root-five"
                  >
                    <p
                      className="MuiTypography-root MuiTypography-body1 css-pfovru-MuiTypography-root"
                    >
                      rejected
                    </p>
                  </div>
                </span>
              </div>
              <div>
                <div
                  className="css-11049aw-title"
                >
                  <a
                    href="/proposals/7"
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                    onTouchStart={[Function]}
                  >
                    <a
                      className="MuiTypography-root MuiTypography-h3 value css-1kl9mnf-MuiTypography-root"
                    >
                      Staking Param Change Part Two
                    </a>
                  </a>
                </div>
                <p
                  className="MuiTypography-root MuiTypography-body2 css-1bzqam7-MuiTypography-root-content"
                >
                  Update max validators
                </p>
              </div>
              <span
                className="css-1d2xof0-desktop"
              >
                <div
                  className="css-117ggys-root-five"
                >
                  <p
                    className="MuiTypography-root MuiTypography-body1 css-pfovru-MuiTypography-root"
                  >
                    rejected
                  </p>
                </div>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`screen: Proposals/List matches snapshot with empty proposal list 1`] = `
<div
  className="css-1twmwxn-root"
  id="Box"
>
  <div
    className="css-14mpgd5-topContent"
  >
    <div
      className="css-1xbqq1r-total"
      id="Total"
      total="0"
    />
  </div>
  <div
    className="css-l0czsq-list"
  >
    <div
      className="List"
      onScroll={[Function]}
      style={
        {
          "WebkitOverflowScrolling": "touch",
          "direction": "ltr",
          "height": 600,
          "overflow": "auto",
          "position": "relative",
          "width": 600,
          "willChange": "transform",
        }
      }
    >
      <div
        style={
          {
            "height": 0,
            "pointerEvents": undefined,
            "width": "100%",
          }
        }
      />
    </div>
  </div>
</div>
`;
